force-app/main/default/objects/Product_Loan__c/Product_Loan__c.object-meta.xml
<CustomObject>
    <description>Denotes an agreement between a brand, and the marketing team, to facilitate the loaning of products for marketing purposes.</description>
    <label>Product Loan</label>
    <nameField>
        <label>Product Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>