force-app/main/default/objects/Product_Loan__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The brand that is loaning the items</description>
    <inlineHelpText>The brand that is loaning the items</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Brands can be related to the product loan</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Loans</relationshipLabel>
    <relationshipName>Product_Loans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>