force-app/main/default/objects/Product_Loan__c/fields/Brand_Employee_Name_On_Collection__c.field-meta.xml
<CustomField>
    <fullName>Brand_Employee_Name_On_Collection__c</fullName>
    <description>The name of the brand employee providing the products for loan</description>
    <inlineHelpText>The name of the brand employee providing the products for loan</inlineHelpText>
    <label>Brand Employee Name On Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>