force-app/main/default/objects/Product_Loan__c/fields/Brand_Employee_Name_On_Return__c.field-meta.xml
<CustomField>
    <fullName>Brand_Employee_Name_On_Return__c</fullName>
    <description>The name of the Brand employee that the loan items were returned to</description>
    <inlineHelpText>The name of the Brand employee that the loan items were returned to</inlineHelpText>
    <label>Brand Employee Name On Return</label>
    <length>255</length>
    <type>Text</type>
</CustomField>