force-app/main/default/objects/Product_Loan__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <description>The date that the items were collected</description>
    <inlineHelpText>The date that the items were collected</inlineHelpText>
    <label>Collection Date</label>
    <type>DateTime</type>
</CustomField>