force-app/main/default/objects/Product_Loan__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
                <label>GBP - British Pound</label>
            </value>
            <value>
                <fullName>EUR</fullName>
                <label>EUR - Euro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>