force-app/main/default/objects/Product_Loan__c/fields/Loaned_To__c.field-meta.xml
<CustomField>
    <fullName>Loaned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that the items have been loaned to</description>
    <inlineHelpText>The user that the items have been loaned to</inlineHelpText>
    <label>Loaned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>