force-app/main/default/objects/Product_Loan__c/fields/Reason_For_Loan__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The marketing activity that this loan will be used for</description>
    <inlineHelpText>The marketing activity that this loan will be used for</inlineHelpText>
    <label>Reason For Loan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only General Activities can be linked to a product loan</errorMessage>
        <filterItems>
            <field>Marketing_Activity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>General Activity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Product Loans</relationshipLabel>
    <relationshipName>Product_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>