force-app/main/default/objects/Product_Loan__c/fields/Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Returned_Date__c</fullName>
    <description>The date that the items were returned</description>
    <inlineHelpText>The date that the items were returned</inlineHelpText>
    <label>Returned Date</label>
    <type>DateTime</type>
</CustomField>