force-app/main/default/objects/Product_Loan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the product loan</description>
    <inlineHelpText>The status of the product loan</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request for collection</fullName>
                <default>true</default>
                <label>Request for collection</label>
            </value>
            <value>
                <fullName>Collected and signed for</fullName>
            </value>
            <value>
                <fullName>Returned but damaged</fullName>
            </value>
            <value>
                <fullName>Returned and signed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>