force-app/main/default/objects/Product_Loan__c/fields/Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Status_Image__c</fullName>
    <formula>CASE(Status__c, 
&quot;Request for collection&quot;, IMAGE(&quot;/resource/RedTrafficLight&quot;, &quot;red&quot;, 30, 15), 
&quot;Collected and signed for&quot;, IMAGE(&quot;/resource/YellowTrafficLight&quot;, &quot;yellow&quot;, 30, 15), 
&quot;Returned but damaged&quot;, IMAGE(&quot;/resource/YellowTrafficLight&quot;, &quot;yellow&quot;, 30, 15), 
&quot;Returned and signed&quot;, IMAGE(&quot;/resource/YellowTrafficLight&quot;, &quot;yellow&quot;, 30, 15), 
&quot;Complete&quot;, IMAGE(&quot;/resource/GreenTrafficLight&quot;, &quot;green&quot;, 30, 15),IMAGE(&quot;/resource/GreenTrafficLight&quot;, &quot;green&quot;, 30, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Image</label>
    <type>Text</type>
</CustomField>