force-app/main/default/objects/Product_Loan__c/fields/Stylist_Name_On_Collection__c.field-meta.xml
<CustomField>
    <fullName>Stylist_Name_On_Collection__c</fullName>
    <description>The name of the stylist that will be using the loaned items</description>
    <inlineHelpText>The name of the stylist that will be using the loaned items</inlineHelpText>
    <label>Stylist Name On Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>