force-app/main/default/objects/Product_Loan__c/fields/Stylist_Name_On_Return__c.field-meta.xml
<CustomField>
    <fullName>Stylist_Name_On_Return__c</fullName>
    <description>The name of the stylist that returned the items</description>
    <inlineHelpText>The name of the stylist that returned the items</inlineHelpText>
    <label>Stylist Name On Return</label>
    <length>255</length>
    <type>Text</type>
</CustomField>