force-app/main/default/objects/Product_Loan__c/fields/Total_Outlet_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Outlet_Value__c</fullName>
    <description>The total outlet price of all the items</description>
    <inlineHelpText>The total outlet price of all the items</inlineHelpText>
    <label>Total Outlet Value</label>
    <summarizedField>Product_Loan_Item__c.Outlet_Price__c</summarizedField>
    <summaryForeignKey>Product_Loan_Item__c.Product_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>