force-app/main/default/objects/Product_Loan__c/fields/Total_Sample_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Value__c</fullName>
    <description>The total sample value of all the items</description>
    <inlineHelpText>The total sample value of all the items</inlineHelpText>
    <label>Total Sample Value</label>
    <summarizedField>Product_Loan_Item__c.Sample_Product_Price__c</summarizedField>
    <summaryForeignKey>Product_Loan_Item__c.Product_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>