force-app/main/default/objects/Product_Loan__c/fields/VR_Employee_Name_On_Collection__c.field-meta.xml
<CustomField>
    <fullName>VR_Employee_Name_On_Collection__c</fullName>
    <description>The name of the VR employee taking receipt of the products for loan</description>
    <inlineHelpText>The name of the VR employee taking receipt of the products for loan</inlineHelpText>
    <label>VR Employee Name On Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>