force-app/main/default/objects/Product_Loan__c/fields/VR_Employee_Name_On_Return__c.field-meta.xml
<CustomField>
    <fullName>VR_Employee_Name_On_Return__c</fullName>
    <description>The VR employee that the item was returned from</description>
    <inlineHelpText>The VR employee that the item was returned from</inlineHelpText>
    <label>VR Employee Name On Return</label>
    <length>255</length>
    <type>Text</type>
</CustomField>