force-app/main/default/objects/Product_Loan__c/listViews/All_Product_Loans.listView-meta.xml
<ListView>
    <fullName>All_Product_Loans</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Reason_For_Loan__c</columns>
    <columns>Loaned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Image__c</columns>
    <columns>Collection_Date__c</columns>
    <columns>Returned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Loans</label>
    <language>en_US</language>
</ListView>